exercises/kubernetes/14-deployment-strategies/d-canary/node-istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: conf-details-svc
spec:
  hosts:
    - conf-details-svc
  http:
  - route:
    - destination:
        host: conf-details-svc
        subset: v1
      weight: 90
    - destination:
        host: conf-details-svc
        subset: v2
      weight: 10
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: conf-details-svc
spec:
  host: conf-details-svc
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
